# bsty

./: .gitignore  CMakeLists.txt  Configuration.cpp  Configuration.h  LICENSE  README.md  conanfile.py  config.json  main.cpp
cgd/: ContaOrdem.cpp  ContaOrdem.h
core/: AccountStatementParser.h  BstyData.cpp  BstyData.h  CMakeLists.txt  ParserMapping.cpp  ParserMapping.h
ut/: CodePageToUtf8Converter.ut.cpp  ContaOrdem.ut.cpp  DateParser.ut.cpp  cgd.ContaOrdem.ut.cpp  windows-1252.sample.txt
util/: CodePageToUtf8Conterter.cpp  CodePageToUtf8Conterter.h  CodePageToUtf8Converter.cpp  CodePageToUtf8Converter.h  DateParser.cpp  DateParser.h
